--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "autoprefixer": "^10.4.14",
     "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "^8.0.0",
@@ -55,10 +56,13 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.4.25",
+    "postcss-loader": "^7.3.3",
     "prettier": "^2.3.1",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^3.3.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.3",
     "webpack": "^5.39.0",
